ajuste título de add para insert & update

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,13 +42,13 @@
                                 <td>
                                     <a th:href="@{/edit/{id}(id=${criptomoeda.id})}"
                                        class="btn btn-primary">
-                                        <i class="fas fa-user-edit ml-2"></i>
+                                        <i class="fas fa-pencil-alt"></i>
                                     </a>
                                 </td>
                                 <td>
                                     <a th:href="@{/delete/{id}(id=${criptomoeda.id})}"
                                        class="btn btn-primary">
-                                        <i class="fas fa-user-times ml-2"></i>
+                                        <i class="fas fa-trash"></i>
                                     </a>
                                 </td>
                             </tr>
