atualização update funcionando

--- a/src/main/resources/templates/criptomoeda.html
+++ b/src/main/resources/templates/criptomoeda.html
@@ -20,7 +20,7 @@
                       method="post">
                     <div class="row">
                         <div class="form-group col-md-8">
-                            <label for="ID" class="col-form-label">ID Cripto</label>
+                            <label for="idCripto" class="col-form-label">ID Cripto</label>
                             <input type="text" th:field="*{id}" class="form-control"
                                    id="idCripto" placeholder="idCripto" />
                         </div>
@@ -44,7 +44,7 @@
                             <input type="submit" class="btn btn-primary" value=" Submit ">
                         </div>
 
-                        <input type="hidden" id="id" th:field="*{id}">
+                        <!--input type="hidden" id="id" th:field="*{id}"-->
 
                     </div>
                 </form>
